--- a/Operation_Meeting_Links.html
+++ b/Operation_Meeting_Links.html
@@ -266,6 +266,31 @@
                     </a></li>
             </ul>
 
+            <h2>Autogen<h2>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=byPbxEH5V8E">Introduction and install of Autogen</a></li>
+                <li><a href="https://microsoft.github.io/autogen/">https://microsoft.github.io/autogen/</a></li>
+                <li><a href="https://microsoft.github.io/autogen/docs/Getting-Started/">https://microsoft.github.io/autogen/docs/Getting-Started/</a></li>
+                <li><a href="https://microsoft.github.io/autogen/docs/Gallery/">https://microsoft.github.io/autogen/docs/Gallery/</a></li>
+                <li><a href="https://microsoft.github.io/autogen/docs/Examples/">https://microsoft.github.io/autogen/docs/Examples/</a></li>
+                <li><a href="https://www.youtube.com/@leonvanzyl">https://www.youtube.com/@leonvanzyl</a></li>
+            </ul>
+
+            <h2>Crewai<h2>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=kJvXT25LkwA">Introduction and install of Crewai</a></li>
+                <li><a href="https://www.crewai.io/">https://www.crewai.io/</a></li>
+                <li><a href="https://python.langchain.com/docs/integrations/tools">LangChain Tools</a></li>
+                <li><a href="https://www.youtube.com/watch?v=tnejrr-0a94">CrewAI Tutorial - Next Generation AI Agent Teams (Fully Local)</a></li>
+                <li><a href="https://docs.crewai.com/tools/ScrapeWebsiteTool/#arguments">https://docs.crewai.com/tools/ScrapeWebsiteTool/#arguments</a></li>
+                <li><a href="https://docs.crewai.com/tools/SerperDevTool/">https://docs.crewai.com/tools/SerperDevTool/</a></li>
+                <li><a href="https://bit.ly/maya-akim">To rent a GPU from Massed Compute (crewAI preinstalled)</a></li>
+                <li><a href="https://github.com/joaomdmoura/crewAI-examples/tree/main">CrewAi Examples</a></li>
+                <li><a href="https://makersuite.google.com/app">Gemini Free API Key</a></li>
+                <li><a href="https://github.com/joaomdmoura/crewAI">CrewAi GitHub Repository</a></li>
+                <li><a href="hhttps://serper.dev">Serper Free Signup</a></li>
+                <li><a href="https://github.com/majacinka/crewai-experiments">hMy Github CrewAI Repo</a></li>
+            </ul> 
                 
 </body>
 </html>
