--- a/Operation_Meeting_Links.html
+++ b/Operation_Meeting_Links.html
@@ -289,7 +289,7 @@
                 <li><a href="https://makersuite.google.com/app">Gemini Free API Key</a></li>
                 <li><a href="https://github.com/joaomdmoura/crewAI">CrewAi GitHub Repository</a></li>
                 <li><a href="hhttps://serper.dev">Serper Free Signup</a></li>
-                <li><a href="https://github.com/majacinka/crewai-experiments">hMy Github CrewAI Repo</a></li>
+                <li><a href="https://github.com/majacinka/crewai-experiments">My Github CrewAI Repo</a></li>
             </ul> 
                 
 </body>
