--- a/Operation_Meeting_Links.html
+++ b/Operation_Meeting_Links.html
@@ -282,6 +282,7 @@
                 <li><a href="https://www.crewai.io/">https://www.crewai.io/</a></li>
                 <li><a href="https://python.langchain.com/docs/integrations/tools">LangChain Tools</a></li>
                 <li><a href="https://www.youtube.com/watch?v=tnejrr-0a94">CrewAI Tutorial - Next Generation AI Agent Teams (Fully Local)</a></li>
+                <li><a href="https://www.youtube.com/watch?v=rIRkxZSn-A8">Using Ollama To Build a FULLY LOCAL "ChatGPT Clone"</a></li>
                 <li><a href="https://docs.crewai.com/tools/ScrapeWebsiteTool/#arguments">https://docs.crewai.com/tools/ScrapeWebsiteTool/#arguments</a></li>
                 <li><a href="https://docs.crewai.com/tools/SerperDevTool/">https://docs.crewai.com/tools/SerperDevTool/</a></li>
                 <li><a href="https://bit.ly/maya-akim">To rent a GPU from Massed Compute (crewAI preinstalled)</a></li>
